# taocli

./: .gitignore  LICENSE  README.md  btcli_parity_matrix.yaml  hatch_build.py  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pytao/: __init__.py
src/pytao/cli/: __init__.py  main.py
src/pytao/sdk/: __init__.py  base.py  client.py  delegate.py  root.py  stake.py  subnet.py  transfer.py  view.py  wallet.py  weights.py
src/taocli/: __init__.py  runner.py
src/taocli/cli/: __init__.py  main.py
src/taocli/sdk/: __init__.py  admin.py  audit.py  base.py  batch.py  block.py  client.py  commitment.py  config.py  contracts.py  crowdloan.py  delegate.py  diff.py  drand.py  evm.py  explain.py  identity.py  liquidity.py  localnet.py  multisig.py  preimage.py  proxy.py  root.py  safe_mode.py  scheduler.py  serve.py  stake.py  subnet.py  subscribe.py  swap.py  transfer.py  utils.py  view.py  wallet.py  weights.py
tests/: conftest.py  test_cli.py  test_error_handling.py  test_init.py  test_packaging_metadata.py  test_runner.py  test_sdk_admin.py  test_sdk_audit.py  test_sdk_base.py  test_sdk_batch.py  test_sdk_block.py  test_sdk_client.py  test_sdk_commitment.py  test_sdk_config.py  test_sdk_contracts.py  test_sdk_crowdloan.py  test_sdk_delegate.py  test_sdk_diff.py  test_sdk_drand.py  test_sdk_evm.py  test_sdk_explain.py  test_sdk_identity.py  test_sdk_liquidity.py  test_sdk_localnet.py  test_sdk_multisig.py  test_sdk_preimage.py  test_sdk_proxy.py  test_sdk_root.py  test_sdk_safe_mode.py  test_sdk_scheduler.py  test_sdk_serve.py  test_sdk_stake.py  test_sdk_subnet.py  test_sdk_subscribe.py  test_sdk_swap.py  test_sdk_transfer.py  test_sdk_utils.py  test_sdk_view.py  test_sdk_wallet.py  test_sdk_weights.py
