[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tao-cli"
version = "0.6.3"
description = "Python CLI + SDK wrapper for agcli — Bittensor staking, transfers, wallets, weights, subnets, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "unarbos", email = "unarbos@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["bittensor", "agcli", "taocli", "tao", "staking", "blockchain"]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/unarbos/taocli"
Repository = "https://github.com/unarbos/taocli"
Issues = "https://github.com/unarbos/taocli/issues"

[project.scripts]
taocli = "taocli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/taocli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["taocli"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
